# batchmatch

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/process/: crop.py  gradient.py  pad.py  tiff.py  tile_tiff.py  warp.py
examples/registration/: differentiable_affine.py  register_cells.py  register_crop_translate.py  register_crop_warp.py  register_mpi.py  register_tiff.py
src/batchmatch/: __init__.py  _hydra.py
src/batchmatch/base/: __init__.py  detail.py  pipeline.py  spatial.py  tensordicts.py
src/batchmatch/gradient/: __init__.py  base.py  config.py  gradient.py  norm.py  normalize.py  process.py
src/batchmatch/helpers/: __init__.py  affine.py  box.py  device.py  image.py  math.py  tensor.py
src/batchmatch/io/: __init__.py  _tiff_meta.py  _tiff_read.py  config.py  convert.py  downsample.py  export.py  imagedetail.py  images.py  product.py  schema.py  space.py  tensors.py  tiff.py  tiff_lazy.py  tiff_meta.py  tiff_read.py  utils.py
src/batchmatch/metric/: __init__.py  base.py  functions.py  metrics.py
src/batchmatch/optimize/: __init__.py  config.py  optimizer.py  pipeline.py  result.py
src/batchmatch/process/: __init__.py  builders.py  cells.py  config.py  crop.py  pad.py  resize.py  shift.py  spatial_stages.py  window.py
src/batchmatch/registration/: __init__.py  builders.py
src/batchmatch/search/: __init__.py  config.py  exhaustive.py  iterator.py  mpi.py  product.py  transform.py
src/batchmatch/translate/: __init__.py  cc.py  config.py  ngf.py  pc.py  pipeline.py  stage.py  utility.py
src/batchmatch/view/: __init__.py  annotate.py  composite.py  config.py  display.py  gallery.py  gradient.py  mask.py  preview.py  render.py
src/batchmatch/warp/: __init__.py  base.py  config.py  resample.py  specs.py  stages.py
