[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batchmatch"
version = "0.1.0"
description = "PyTorch helpers for template matching and image registration."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "William Ruys", email = "wlruys@gmail.com" }]
keywords = ["image", "infrared", "processing", "registration"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "frozendict>=2.4.7",
    "hydra-core>=1.3.2",
    "imagecodecs>=2025.3.30",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pillow>=10.0",
    "rich>=13.3",
    "scikit-image>=0.22",
    "scipy>=1.11",
    "tensordict>=0.4",
    "tifffile>=2024.1",
    "torch>=2.3",
    "torchvision>=0.18",
    "typing-extensions>=4.9",
    "zarr>=2.17",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.5",
    "pytest>=9.0.2",
    "ruff>=0.4",
]
mpi = ["mpi4py>=3.1"]
all = ["batchmatch[dev,mpi]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "cuda: marks tests requiring CUDA",
    "mps: marks tests requiring MPS (Apple Silicon)",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["batchmatch*"]
exclude = ["examples*", "tests*"]

[tool.coverage.run]
branch = true
source_pkgs = ["batchmatch"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
target-version = "py310"
